tried a new build where I add padding to the top, this might fix it for cases where it doesnt align

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -113,7 +113,8 @@ a:hover {
     flex-direction: column;
     text-align: center;
     font-family: "Geist";
-    height: 100vh;
+    padding-top: 15vh;
+    height: fit-content;
     margin: 0 15%;
     animation: fadeIn 1.5s;
 }
